[project]
name = "insurance-chatbot"
version = "2.0.0"
description = "LangGraph + MCP + ChromaDB 기반 보험 챗봇"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "openai>=1.30",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "mcp>=1.0",
    "pymupdf>=1.24",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "tenacity>=8.2",
    "langgraph-checkpoint-sqlite>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
serve = "run:main"
mcp = "run_mcp:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
